# packer

./: Cargo.toml  README.md
examples/img_and_font/: gen.rs  main.rs
examples/img_and_font/packed/: meta.json
src/: asset_ir.rs  asset_reader.rs  codegen.rs  lib.rs  packer.rs  pixel_rect.rs  texture_atlas.rs
