[package]
name = "packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimg = "0.1.2"
minvect = "0.1.5"
serde_json = "1.0.108"
serde = {version = "1.0.193", features = ["derive"]}
ab_glyph = "0.2.23"
